# airline-profitability-app

./: .gitignore  .replit  IMPORTANT_LINKS.md  LICENSE  README.md  app.py  pyproject.toml
attached_assets/: Pasted-import-pandas-as-pd-import-requests-import-io-url-https-docs-google-com-spreadsheets-d-1740909986548.txt
utils/: data_utils.py  model_utils.py  plot_utils.py
